--- a/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-sidebar.component.scss
+++ b/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-sidebar.component.scss
@@ -5,6 +5,9 @@
   margin-right: auto;
   min-height: 500px;
   position: relative;
+  .transactions__filter-header {
+    padding-bottom: 15px;
+  }
   .search-field {
     margin-left: auto;
     margin-right: auto;
