--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -53,35 +53,35 @@
               <i class="filter-icon"></i>
               Filter
             </button>
+            <div class="input-group pl-0 transactions__trx-search">
+              <div class="input-group-append" (click)="clearSearch()" 
+                  ngbTooltip="Clear Keywords" tooltipClass="form-tooltip">
+                <span class="input-group-text" id="">
+                  <i class="fas fa-eraser text-grey" aria-hidden="true"></i>
+                </span>
+              </div>                
+              <input class="form-control py-1" type="text" placeholder="Search All" 
+                [(ngModel)]="searchText" aria-label="Search">
+              <div class="input-group-append" (click)="search()"
+                  ngbTooltip="Search All" tooltipClass="form-tooltip">
+                <span class="input-group-text" id="">
+                  <i class="search-icon text-grey" aria-hidden="true"></i>
+                </span>
+              </div>
+            </div>              
           </div>
-          <div class="input-group pl-0 transactions__trx-search">
-            <input class="form-control py-1" type="text" placeholder="Search All" 
-              [(ngModel)]="searchText" aria-label="Search">
-            <div class="input-group-append" (click)="search()">
-              <span class="input-group-text" id="">
-                <i class="search-icon text-grey" aria-hidden="true"></i>
-              </span>
-            </div>
-          </div>          
         </div>
       </div>
       <div class="grid-row">
         <div class="grid-row__col grid-row__col--12">
-          <div class="">
+          <div class="transactions__btn-container">
             <button *ngFor="let searchTextItem of searchTextArray; let i = index" 
-              class="btn btn-primary btn-left transactions__trx-btn"
-              (click)="removeSearchText(i)">{{ searchTextItem }}
+              class="btn btn-left transactions__btn-search-filter transactions__btn-container;"
+              (click)="removeSearchText(i)">
+              <i class="fas fa-window-close"></i>
+              {{ searchTextItem }}
             </button>
           </div>          
-          <!-- <div class="input-group pl-0 transactions__trx-search">
-            <input class="form-control py-1" type="text" placeholder="Search by Transaction" 
-              [(ngModel)]="searchText" aria-label="Search">
-            <div class="input-group-append" (click)="search()">
-              <span class="input-group-text" id="">
-                <i class="search-icon text-grey" aria-hidden="true"></i>
-              </span>
-            </div>
-          </div>       -->
         </div>
       </div>
       <app-transactions-table 
