--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
@@ -1,4 +1,4 @@
-<div class="transactions__table-container">
+<div  class="transactions__table-container">
   <div class="grid-row float-right transactions__page-item-range">
     <div class="float-right transactions__item-range">
       {{determineItemRange()}} of {{config.totalItems}}
@@ -8,54 +8,54 @@
     <thead>
       <tr>
         <th class="transactions__table-checkbox">
-          <input *ngIf="isTransactionViewActive()" [(ngModel)]="allTransactionsSelected" type="checkbox"
+          <input [@fadeInOut] *ngIf="isTransactionViewActive()" [(ngModel)]="allTransactionsSelected" type="checkbox"
             (change)="changeAllTransactionsSelected()">
         </th>
-        <th *ngIf="isColumnVisible('type')" [class]="getSortClass('type')" (click)="changeSortDirection('type')">Type
+        <th [@fadeInOut] *ngIf="isColumnVisible('type')" [class]="getSortClass('type')" (click)="changeSortDirection('type')">Type
         </th>
-        <th *ngIf="isColumnVisible('transactionId')" [class]="getSortClass('transactionId')"
+        <th [@fadeInOut] *ngIf="isColumnVisible('transactionId')" [class]="getSortClass('transactionId')"
           (click)="changeSortDirection('transactionId')">Transaction ID
         </th>
-        <th *ngIf="isColumnVisible('name')" [class]="getSortClass('name')" (click)="changeSortDirection('name')">Name
+        <th [@fadeInOut] *ngIf="isColumnVisible('name')" [class]="getSortClass('name')" (click)="changeSortDirection('name')">Name
         </th>
-        <th *ngIf="isColumnVisible('street')" [class]="getSortClass('street')" (click)="changeSortDirection('street')">
+        <th [@fadeInOut] *ngIf="isColumnVisible('street')" [class]="getSortClass('street')" (click)="changeSortDirection('street')">
           Street
         </th>
-        <th *ngIf="isColumnVisible('city')" [class]="getSortClass('city')" (click)="changeSortDirection('city')">City
+        <th [@fadeInOut] *ngIf="isColumnVisible('city')" [class]="getSortClass('city')" (click)="changeSortDirection('city')">City
         </th>
-        <th *ngIf="isColumnVisible('state')" [class]="getSortClass('state')" (click)="changeSortDirection('state')">
+        <th [@fadeInOut] *ngIf="isColumnVisible('state')" [class]="getSortClass('state')" (click)="changeSortDirection('state')">
           State
         </th>
-        <th *ngIf="isColumnVisible('zip')" [class]="getSortClass('zip')" (click)="changeSortDirection('zip')">Zip
+        <th [@fadeInOut] *ngIf="isColumnVisible('zip')" [class]="getSortClass('zip')" (click)="changeSortDirection('zip')">Zip
         </th>
-        <th *ngIf="isColumnVisible('date')" [class]="getSortClass('date')" (click)="changeSortDirection('date')">Date
+        <th [@fadeInOut] *ngIf="isColumnVisible('date')" [class]="getSortClass('date')" (click)="changeSortDirection('date')">Date
         </th>
-        <th *ngIf="isColumnVisible('amount')" [class]="getSortClass('amount')" (click)="changeSortDirection('amount')">
+        <th [@fadeInOut] *ngIf="isColumnVisible('amount')" [class]="getSortClass('amount')" (click)="changeSortDirection('amount')">
           Amount
         </th>
-        <th *ngIf="isColumnVisible('aggregate')" [class]="getSortClass('aggregate')"
+        <th [@fadeInOut] *ngIf="isColumnVisible('aggregate')" [class]="getSortClass('aggregate')"
           (click)="changeSortDirection('aggregate')">Aggregate
         </th>
-        <th *ngIf="isColumnVisible('purposeDescription')" [class]="getSortClass('purposeDescription')"
+        <th [@fadeInOut] *ngIf="isColumnVisible('purposeDescription')" [class]="getSortClass('purposeDescription')"
           (click)="changeSortDirection('purposeDescription')">Purpose Description
         </th>
-        <th *ngIf="isColumnVisible('contributorEmployer')" [class]="getSortClass('contributorEmployer')"
+        <th [@fadeInOut] *ngIf="isColumnVisible('contributorEmployer')" [class]="getSortClass('contributorEmployer')"
           (click)="changeSortDirection('contributorEmployer')">Contributor Employer
         </th>
-        <th *ngIf="isColumnVisible('contributorOccupation')" [class]="getSortClass('contributorOccupation')"
+        <th [@fadeInOut] *ngIf="isColumnVisible('contributorOccupation')" [class]="getSortClass('contributorOccupation')"
           (click)="changeSortDirection('contributorOccupation')">Contributor Occupation
         </th>
-        <th *ngIf="isColumnVisible('memoCode')" [class]="getSortClass('memoCode')"
+        <th [@fadeInOut] *ngIf="isColumnVisible('memoCode')" [class]="getSortClass('memoCode')"
           (click)="changeSortDirection('memoCode')">Memo Code
         </th>
-        <th *ngIf="isColumnVisible('memoText')" [class]="getSortClass('memoText')"
+        <th [@fadeInOut] *ngIf="isColumnVisible('memoText')" [class]="getSortClass('memoText')"
           (click)="changeSortDirection('memoText')">Memo Text/Description
         </th>
-        <th *ngIf="isRecycleBinViewActive()" [class]="getSortClass('deletedDate')"
+        <th [@fadeInOut] *ngIf="isRecycleBinViewActive()" [class]="getSortClass('deletedDate')"
           (click)="changeSortDirection('deletedDate')">Deleted Date
         </th>
         <th class="bulk_action">
-          <div *ngIf="isTransactionViewActive()" class="btn-group" ngbDropdown role="group"
+          <div [@fadeInOut] *ngIf="isTransactionViewActive()" class="btn-group" ngbDropdown role="group"
             aria-label="Action dropdown">
             <button class="btn btn-sm btn-primary transactions__bulk_action_btn" 
               ngbDropdownToggle [disabled]="bulkActionDisabled">
@@ -87,29 +87,29 @@
         <td>
           <input [(ngModel)]="trx.selected" type="checkbox" (click)="checkForMultiChecked($event)">
         </td>
-        <td *ngIf="isColumnVisible('type')">{{trx.type}}</td>
-        <td *ngIf="isColumnVisible('transactionId')">{{trx.transactionId}}</td>
-        <td *ngIf="isColumnVisible('name')">{{trx.name}}</td>
-        <td *ngIf="isColumnVisible('street')">{{trx.street}}</td>
-        <td *ngIf="isColumnVisible('city')">{{trx.city}}</td>
-        <td *ngIf="isColumnVisible('state')">{{trx.state}}</td>
-        <td *ngIf="isColumnVisible('zip')">{{trx.zip | zipCode}}</td>
-        <td *ngIf="isColumnVisible('date')">{{trx.date | date: 'MM/dd/yyyy'}}</td>
-        <td *ngIf="isColumnVisible('amount')">{{trx.amount | currency:'USD':'symbol-narrow':'1.0-0'}}</td>
-        <td *ngIf="isColumnVisible('aggregate')">{{trx.aggregate}}</td>
-        <td *ngIf="isColumnVisible('purposeDescription')">{{trx.purposeDescription}}</td>
-        <td *ngIf="isColumnVisible('contributorEmployer')">{{trx.contributorEmployer}}</td>
-        <td *ngIf="isColumnVisible('contributorOccupation')">{{trx.contributorOccupation}}</td>
-        <td *ngIf="isColumnVisible('memoCode')">{{trx.memoCode}}</td>
-        <td *ngIf="isColumnVisible('memoText')">{{trx.memoText}}</td>
-        <td *ngIf="isRecycleBinViewActive()">{{trx.date | date: 'MM/dd/yyyy'}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('type')">{{trx.type}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('transactionId')">{{trx.transactionId}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('name')">{{trx.name}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('street')">{{trx.street}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('city')">{{trx.city}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('state')">{{trx.state}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('zip')">{{trx.zip | zipCode}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('date')">{{trx.date | date: 'MM/dd/yyyy'}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('amount')">{{trx.amount | currency:'USD':'symbol-narrow':'1.0-0'}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('aggregate')">{{trx.aggregate}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('purposeDescription')">{{trx.purposeDescription}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('contributorEmployer')">{{trx.contributorEmployer}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('contributorOccupation')">{{trx.contributorOccupation}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('memoCode')">{{trx.memoCode}}</td>
+        <td [@fadeInOut] *ngIf="isColumnVisible('memoText')">{{trx.memoText}}</td>
+        <td [@fadeInOut] *ngIf="isRecycleBinViewActive()">{{trx.date | date: 'MM/dd/yyyy'}}</td>
         <td>
-          <div *ngIf="isRecycleBinViewActive()">
+          <div [@fadeInOut] *ngIf="isRecycleBinViewActive()">
             <button class="btn btn-sm btn-primary" (click)="restoreTransaction(trx)">
               <i class="fas fa-trash-restore"></i>
             </button>
           </div>
-          <div *ngIf="isTransactionViewActive()" class="btn-group" ngbDropdown role="group"
+          <div [@fadeInOut] *ngIf="isTransactionViewActive()" class="btn-group" ngbDropdown role="group"
             aria-label="Action dropdown">
             <button class="btn btn-sm btn-primary" ngbDropdownToggle>
               <i class="fas fa-ellipsis-h"></i>
@@ -136,7 +136,7 @@
       </tr>
     </tbody>
   </table>
-  <div *ngIf="isTransactionViewActive()" class="container">
+  <div [@fadeInOut]  *ngIf="isTransactionViewActive()" class="container">
     <div class="row transactions__total-amount-container">
       <div class="col-sm transactions__total-amount">
         <b>Total Amount</b>
