--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
@@ -12,7 +12,7 @@
           <button
             type="button"
             class="btn btn-link"
-            value="{{ categoryType?.text.toLowerCase() }}"
+            value="{{ categoryType?.value }}"
             (click)="selectItem($event)"
           >
             <i class="plus-icon" aria-hidden="true"></i>
