--- a/front-end/src/app/reports/reportheader/reportheader.component.html
+++ b/front-end/src/app/reports/reportheader/reportheader.component.html
@@ -14,8 +14,9 @@
         <div class="card pl-3 pr-3">
                    <h2 class="pb-3 pt-3 border-bottom"><B>Reports</B>
                       <span class="float-right">
-                      <!--<button type="button" class="btn btn-success"><i class="fas fa-sync-alt"></i> Refresh</button>-->
-                      <button type="button" class="btn btn-primary"><i class="fas fa-filter"></i> Filter</button>
+
+                    <button type="button" class="btn btn-primary"><i class="fas fa-filter"></i> Filter</button> &nbsp;&nbsp;&nbsp;
+                      <button type="button" class="btn btn-primary"><i class="fas fa-recycle"></i> Recycle</button>                    
                     </span>
                     </h2>
                     <ngb-tabset type="pills" width=200px>
