Feature fne 439 mahendra sprint9 (#309)
* FNE 439 changes

FNE 439 changes

*  FNE 439 changes


FNE 439 changes

*  FNE 439 changes


FNE 439 changes

*  FNE 439 changes


FNE 439 changes

*  FNE 439 changes


FNE 439 changes

* FNE 439 changes

FNE 439 changes

*  FNE 439 changes


FNE 439 changes

* FNE 439 changes

FNE 439 changes

* FNE 439 changes

FNE 439 changes

* FNE 439 changes

FNE 439 changes

* FNE 439 changes

FNE 439 changes

* FNE 439 changes

FNE 439 changes

* FNE439 changes

FNE439 changes

* FNE 439 changes

FNE 439 changes

--- a/front-end/src/app/reports/reportheader/reportheader.component.html
+++ b/front-end/src/app/reports/reportheader/reportheader.component.html
@@ -1,6 +1,6 @@
 <div class="forms__wizard" >
  
-  <div class="form__sidebar" >
+  <div class="form__sidebar" *ngIf="showSideBar">
      <app-reportsidebar
           title="Report Coverage Dates"
           (status)='onNotify($event)'
@@ -15,8 +15,14 @@
                    <h2 class="pb-3 pt-3 border-bottom"><B>Reports</B>
                       <span class="float-right">
 
-                    <button type="button" class="btn btn-primary"><i class="fas fa-filter"></i> Filter</button> &nbsp;&nbsp;&nbsp;
-                      <button type="button" class="btn btn-primary"><i class="fas fa-recycle"></i> Recycle</button>                    
+                    <button  class="btn btn-primary" (click)="showFilter()">
+                    <i class="fas fa-filter"></i> Filter
+                    </button> &nbsp;&nbsp;&nbsp;
+
+                    <button class="btn btn-primary" (click)="recycleReports()">
+                    <i class="fas fa-recycle"></i> Recycle
+                    </button>      
+
                     </span>
                     </h2>
                     <ngb-tabset type="pills" width=200px>
