--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -58,6 +58,7 @@
           [reportsLoading]="reportsLoading"
           [coverageDateNotSelected]="coverageDateNotSelected"
           [committeeReportTypes]="reportTypes"
+          [selectedReportInfo]="selectedReportInfo"
         >
         </f3x-report-type>
       </div>
