--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.html
@@ -39,13 +39,12 @@
     </div>
     <div class="form-sidebar__btns">
       <div class="btn-row">
-        <a
+        <button
+          type="button"
           class="btn btn-secondary-gray"
-          [routerLink]="['/forms/form/', '3X']"
-          [queryParams]="{ step: 'financial_summary' }"
         >
           Summary
-        </a>
+        </button>
       </div>
       <div class="btn-row">
         <button
