--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -46,15 +46,21 @@
           </div>
         </div>
         <div class="float-right">
-          <div class="float-right" *ngIf="showForm3XDashBoard===true">
-            <div>{{form3XDueDate}}</div>
-            <button
-              type="button"
-              class="btn btn-link btn-edit"
-            >
-              <i class="edit-icon" aria-hidden="true"></i>
-              <span class="sr-only">Click to edit date.</span>
-            </button>
+          <div class="float-right" *ngIf="showFormDueDate">
+            <div>
+              Form {{formType}} |  {{formDescription}} |
+              {{formStartDate | date: 'MM/dd/yyyy'}} - {{formEndDate | date: 'MM/dd/yyyy'}}
+            </div>
+            <div>
+              Due in {{formDueDate}} days.
+              <button
+                type="button"
+                class="btn btn-link btn-edit"
+              >
+                <i class="edit-icon" aria-hidden="true"></i>
+                <span class="sr-only">Click to edit date.</span>
+              </button>
+            </div>
           </div>
         </div>
       </div>
